RESOLVED FIXED85455
Compositing 'requiresOwnBackingStore' logic caused new clip rect assertions
https://bugs.webkit.org/show_bug.cgi?id=85455
Summary Compositing 'requiresOwnBackingStore' logic caused new clip rect assertions
Simon Fraser (smfr)
Reported 2012-05-02 22:23:23 PDT
The logic added in r114283 causes some new assertions at ASSERT(rootLayer == m_clipRectsRoot);
Attachments
Testcase (412 bytes, text/html)
2012-05-02 22:24 PDT, Simon Fraser (smfr)
no flags
Patch (2.00 KB, patch)
2012-05-03 13:25 PDT, Simon Fraser (smfr)
dino: review+
Simon Fraser (smfr)
Comment 1 2012-05-02 22:24:55 PDT
Created attachment 139952 [details] Testcase
Simon Fraser (smfr)
Comment 2 2012-05-03 13:25:21 PDT
Tim Horton
Comment 3 2012-05-03 13:26:34 PDT
Comment on attachment 140079 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=140079&action=review > Source/WebCore/ChangeLog:8 > + r114283 added logic that allows compositing layres to avoid allocating their own s/layres/layers/
Simon Fraser (smfr)
Comment 4 2012-05-03 13:33:05 PDT
Note You need to log in before you can comment on or make changes to this bug.