Compositing 'requiresOwnBackingStore' logic caused new clip rect assertions https://bugs.webkit.org/show_bug.cgi?id=85455

Reviewed by Dean Jackson.

r114283 added logic that allows compositing layers to avoid allocating their own
backing store and to paint into an ancestor instead. However, that caused
assertions in RenderLayer::updateClipRects() about m_clipRectsRoot being
incorrect, because clip rect code assumed that compositing layers
always painted themselves.

Fixed by calling paintsIntoCompositedAncestor() in RenderLayer::clippingRoot(),
so that clip rect computation matches painting.

I wasn't able to easily make a test that reproduces the assertion in DRT.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::clippingRoot):

Canonical link: https://commits.webkit.org/103077@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116003 268f45cc-cd09-0410-ab3c-d52691b4dbfc